feat: track and restore user access
